[project]
name = "datastructures"
version = "0.1.0"
description = ""
authors = [
    {name = "mrforemanmaths",email = "wforeman@sblacademy.org.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
